# solana-sdk

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: backport.yml  main.yml  publish-rust.yml  sysvar-comment.yml
account/: Cargo.toml
account-info/: Cargo.toml
account-view/: Cargo.toml
account-view/src/: lib.rs
account/src/: account.rs  lib.rs  serde.rs  state_traits.rs
address/: Cargo.toml
address-lookup-table-interface/: Cargo.toml
address-lookup-table-interface/src/: instruction.rs  state.rs
address/src/: derive.rs  hasher.rs  lib.rs  syscalls.rs
atomic-u64/: Cargo.toml
base3-encoding/: Cargo.toml
base3-encoding/benches/: bytes.rs
base3-encoding/src/: lib.rs
big-mod-exp/: Cargo.toml
big-mod-exp/benches/: big_mod_exp_bench.rs
big-mod-exp/src/: lib.rs
bls/: Cargo.toml
bls-signatures/: Cargo.toml  README.md
bls-signatures/benches/: bls_signatures.rs
bls-signatures/src/: error.rs  hash.rs  keypair.rs  lib.rs  macros.rs  proof_of_possession.rs  pubkey.rs  secret_key.rs  signature.rs
bls-signatures/tests/: ethereum_vectors.rs  fetch_ethereum_vectors.py
bls/src/: keypair.rs  lib.rs  pod.rs  proof_of_possession.rs  pubkey.rs  secret_key.rs  signature.rs
bls12-381-core/: Cargo.toml
bls12-381-core/src/: addition.rs  decompression.rs  lib.rs  multiplication.rs  pairing.rs  subtraction.rs  validation.rs
bls12-381-core/src/test_vectors/: decompression.rs  multiplication.rs  subtraction.rs  validation.rs
bn254/: Cargo.toml
bn254/benches/: bn254.rs
bn254/src/: addition.rs  compression.rs  lib.rs  multiplication.rs  pairing.rs
bn254/tests/: curve_operations.rs
borsh/: Cargo.toml
borsh/src/: lib.rs  macros.rs
client-traits/: Cargo.toml
clock/: Cargo.toml
clock/src/: lib.rs  sysvar.rs
cluster-type/: Cargo.toml
commitment-config/: Cargo.toml
commitment-config/src/: lib.rs
curve25519/: Cargo.toml
curve25519/src/: edwards.rs  lib.rs  ristretto.rs
define-syscall/: Cargo.toml
define-syscall/src/: definitions.rs  lib.rs
epoch-info/: Cargo.toml
epoch-rewards/: Cargo.toml
epoch-rewards-hasher/: Cargo.toml
epoch-rewards/src/: lib.rs  sysvar.rs
epoch-schedule/: Cargo.toml
epoch-schedule/src/: lib.rs  sysvar.rs
epoch-stake/: Cargo.toml
example-mocks/: Cargo.toml
example-mocks/src/: lib.rs
feature-gate-interface/: Cargo.toml
feature-gate-interface/src/: instruction.rs  lib.rs
feature-set/src/: lib.rs
fee-calculator/: Cargo.toml
fee-calculator/src/: lib.rs
file-download/: Cargo.toml
file-download/src/: lib.rs
frozen-abi/: Cargo.toml
frozen-abi-macro/: Cargo.toml
frozen-abi-macro/src/: lib.rs
frozen-abi/src/: abi_digester.rs  abi_example.rs  hash.rs  lib.rs  stable_abi.rs
genesis-config/: Cargo.toml
genesis-config/src/: lib.rs
get-sysvar/: Cargo.toml
get-sysvar/src/: lib.rs
hard-forks/: Cargo.toml
hard-forks/src/: lib.rs
hash/: Cargo.toml
hash-512/: Cargo.toml
hash-512/src/: lib.rs
hash/src/: lib.rs
inflation/: Cargo.toml
inflation/src/: lib.rs
instruction/: Cargo.toml
instruction-error/: Cargo.toml
instruction-error/src/: lib.rs
instruction-view/: Cargo.toml
instruction-view/src/: cpi.rs  lib.rs
instruction/src/: account_meta.rs  lib.rs
instructions-sysvar/: Cargo.toml
instructions-sysvar/src/: lib.rs
keypair/: Cargo.toml
keypair/src/: lib.rs
last-restart-slot/: Cargo.toml
last-restart-slot/src/: lib.rs  sysvar.rs
loader-v3-interface/: Cargo.toml
loader-v3-interface/src/: instruction.rs  state.rs
message/: Cargo.toml
message/src/: account_keys.rs  compiled_instruction.rs  compiled_keys.rs  inline_nonce.rs  inner_instruction.rs  legacy.rs  lib.rs  sanitized.rs
msg/: Cargo.toml
nonce/: Cargo.toml
nonce-account/: Cargo.toml
nonce-account/src/: lib.rs
nonce/src/: state.rs  versions.rs
nullable/: Cargo.toml
nullable/src/: lib.rs  maybe_null.rs  nullable.rs  serde_with.rs
package-metadata/: Cargo.toml
packet/: Cargo.toml
packet/src/: lib.rs
poseidon/: Cargo.toml
poseidon/src/: lib.rs
precompiles/src/: lib.rs
program/: Cargo.toml
program-entrypoint/: Cargo.toml
program-error/: Cargo.toml
program-log/: Cargo.toml
program-log-macro/: Cargo.toml
program-log-macro/src/: lib.rs
program-log/src/: lib.rs  logger.rs  wrapper.rs
program-option/: Cargo.toml
program-option/src/: lib.rs
program-pack/: Cargo.toml
program-pack/src/: lib.rs
program/src/: lib.rs
pubkey/: Cargo.toml
rent/: Cargo.toml
rent/src/: lib.rs  sysvar.rs
reserved-account-keys/src/: lib.rs
reward-info/: Cargo.toml
scripts/: build-sbf.sh  check-audit.sh  check-doc.sh  check-msrv.sh  check-no-std.sh  check-powerset.sh  patch-crates-functions.sh  read-rust-versions.sh  rust-version.sh  test-frozen-abi.sh  test-miri.sh
sdk/: Cargo.toml
sdk-ids/: Cargo.toml
sdk-macro/: Cargo.toml
sdk-wasm-js/: Cargo.toml
sdk-wasm-js-tests/: Cargo.toml
secp256k1-program/: Cargo.toml
secp256k1-recover/: Cargo.toml
secp256r1-program/: Cargo.toml
serde-varint/: Cargo.toml
serialize-utils/: Cargo.toml
sha512-hasher/: Cargo.toml
sha512-hasher/src/: lib.rs
short-vec/: Cargo.toml
short-vec/benches/: short_u16.rs
short-vec/src/: lib.rs  wincode.rs
shred-version/: Cargo.toml
signature/: Cargo.toml
signer/: Cargo.toml
slot-hashes/: Cargo.toml
slot-hashes/src/: lib.rs  sysvar.rs
slot-history/: Cargo.toml
stable-layout/: Cargo.toml
stake-history/: Cargo.toml
stake-history/src/: lib.rs  sysvar.rs
svm-transaction/: Cargo.toml
svm-transaction/src/: lib.rs  svm_message.rs  tests.rs
svm-transaction/src/svm_message/: sanitized_message.rs  sanitized_transaction.rs
system-interface/: Cargo.toml
system-transaction/: Cargo.toml
system-wasm-js/: Cargo.toml
sysvar/: Cargo.toml
sysvar-id/: Cargo.toml
transaction/: Cargo.toml
transaction-error/: Cargo.toml
transaction-error/src/: lib.rs
vote-interface/: Cargo.toml
wincode-varint/: Cargo.toml
wincode-varint/benches/: write.rs
wincode-varint/src/: lib.rs
zero-copy/: Cargo.toml
zero-copy/src/: lib.rs  unaligned.rs
(+80 files in other folders)
