[package]
name = "solana-bls12-381"
description = "Solana BLS12-381"
documentation = "https://docs.rs/solana-bls12-381"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
include = ["src/**/*"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]

[target.'cfg(not(target_os = "solana"))'.dependencies]
blst = { workspace = true }
blstrs = { workspace = true }
group = { workspace = true }
pairing = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }
criterion = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
