[package]
name = "solana-frozen-abi-macro"
description = "Solana Frozen ABI Macro"
documentation = "https://docs.rs/solana-frozen-abi-macro"
version = "3.6.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
proc-macro = true

[features]
default = ["frozen-abi"]
# Deprecated: `frozen-abi` is now enabled by default and no longer needs to be
# requested explicitly. It is retained for backward compatibility and will be
# removed in a future release.
frozen-abi = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[lints]
workspace = true
