[package]
name = "solana-instruction"
description = "Types for directing the execution of Solana programs."
documentation = "https://docs.rs/solana-instruction"
version = "3.3.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = ["dep:bincode", "dep:serde"]
borsh = ["dep:borsh"]
default = ["std"]
# The `frozen-abi` feature is unused. Remove with the next breaking release.
frozen-abi = []
serde = ["serde/alloc", "dep:serde_derive", "solana-pubkey/serde"]
# The `std` feature is currently unused and retained for backwards compatibility.
std = []
syscalls = []
wincode = ["dep:wincode", "solana-pubkey/wincode"]

[dependencies]
bincode = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-instruction-error = { workspace = true, features = ["num-traits"] }
solana-pubkey = { workspace = true, default-features = false }
wincode = { workspace = true, features = ["alloc"], optional = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
solana-instruction = { path = ".", features = ["borsh"] }
solana-pubkey = { workspace = true, features = ["std"] }

[lints]
workspace = true
