[package]
name = "solana-nullable"
description = "Solana trait for types with a reserved null value"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bytemuck = ["dep:bytemuck"]
borsh = ["dep:borsh"]
serde = ["dep:serde"]
wincode = ["dep:wincode"]

[dependencies]
borsh = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
wincode = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
solana-nullable = { path = ".", features = ["bytemuck", "borsh", "serde", "wincode"] }
wincode = { workspace = true, features = ["alloc"] }

[lints]
workspace = true
