[package]
name = "solana-poseidon"
description = "Solana Poseidon hashing"
documentation = "https://docs.rs/solana-poseidon"
version = "4.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
ark-bn254 = { workspace = true }
ark-bn254-0-4 = { package = "ark-bn254", version = "0.4.0" }
light-poseidon = { workspace = true }
light-poseidon-0-2 = { package = "light-poseidon", version = "0.2.0" }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[lints]
workspace = true
