[package]
name = "solana-short-vec"
description = "Solana compact serde-encoding of vectors with small length."
documentation = "https://docs.rs/solana-short-vec"
version = "3.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["serde"]
serde = ["dep:serde_core"]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
wincode = ["dep:wincode"]

[dependencies]
serde_core = { workspace = true, optional = true }
solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = ["frozen-abi"] }
wincode = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-short-vec = { path = ".", features = ["serde", "wincode"] }
wincode = { workspace = true, features = ["alloc", "derive"] }

[[bench]]
name = "short_u16"
harness = false
required-features = ["wincode"]

[lints]
workspace = true
