[package]
name = "solana-transaction-error"
description = "Solana TransactionError type"
documentation = "https://docs.rs/solana-transaction-error"
version = "3.2.1"
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "serde",
    "solana-instruction-error/frozen-abi",
]
serde = ["dep:serde", "dep:serde_derive", "solana-instruction-error/serde"]
wincode = ["dep:wincode", "solana-instruction-error/wincode"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
solana-frozen-abi-macro = { workspace = true, optional = true }
solana-instruction-error = { workspace = true }
solana-sanitize = { workspace = true }
wincode = { workspace = true, optional = true }

[dev-dependencies]
# Self-dependency enabling `wincode` so the `frozen_abi` wincode digest test can
# serialize `TransactionError` during unit tests.
solana-transaction-error = { path = ".", features = ["wincode"] }

[lints]
workspace = true
